prevent page jump

--- a/public/stylesheets/background.css
+++ b/public/stylesheets/background.css
@@ -4,6 +4,7 @@
 
 body {
 	margin-top: 70px;
+	overflow-y: scroll;
 }
 
 a {
